src/tests/testfiles/function-calls/3.txt
testfiles/function-calls/3.c:6:5: error: parameter 1 of 'f' expected 'float' but got 'int'
f(0);
  ^
